@@ -1,0 +1,37 @@
+# PeriodicSaveThread.py
+# This file is part of Labyrinth
+#
+# Copyright (C) 2008 - Labyrinth-Dev-Team
+#
+# Labyrinth is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# Labyrinth is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with Labyrinth; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin St, Fifth Floor,
+# Boston, MA  02110-1301  USA
+#
+
+import threading
+import time
+
+class PeriodicSaveThread(threading.Thread):
+
+	def __init__(self, main_area):
+		threading.Thread.__init__(self)
+		self.main_area = main_area
+		self.cancel = False
+
+	def run (self):
+		time.sleep (60)
+		while not self.cancel:
+			self.main_area.save_thyself ()
+			time.sleep (60)
+
